# Workspace-Switcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  debian.yml
debian/: changelog  clean  control  copyright  files  rules
debian/source/: include-binaries  options
docs/: HelpTOC.json  Map.jhm  config.json  examples.html  index_md.html  license.html  starter.html
